test/bad/basic/var3.px

if true do
    x = true
y = true and x
